APB-10575 cleanup in views (#165)
* APB-10575 cleanup in views

Signed-off-by: pav <173694350+paweldigital@users.noreply.github.com>

* APB-10575 further cleanup for individuals

Signed-off-by: pav <173694350+paweldigital@users.noreply.github.com>

* APB-10575 fixes after merge

Signed-off-by: pav <173694350+paweldigital@users.noreply.github.com>

---------

Signed-off-by: pav <173694350+paweldigital@users.noreply.github.com>

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/AnswerSummary.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/AnswerSummary.scala.html
@@ -17,14 +17,15 @@
 @import uk.gov.hmrc.agentregistration.shared.businessdetails.BusinessDetailsLlp
 
 @this(
-  govukSummaryList: GovukSummaryList
+        govukSummaryList: GovukSummaryList
 )
 
 @(
         key: String,
         answers: BusinessDetailsLlp,
-        canChange: Boolean = true
-)(implicit messages: Messages)
+        canChange: Boolean = true)(implicit
+        messages: Messages
+)
 
 @agentTypeRow = @{
   SummaryListRow(
