--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/SignInWithAgentDetailsPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/SignInWithAgentDetailsPage.scala.html
@@ -19,11 +19,15 @@
 @import sttp.model.Uri
 
 @this(
-    layout: Layout,
-    govukButton: GovukButton
+        layout: Layout,
+        govukButton: GovukButton
 )
 
-@(signInLink: Uri)(implicit request: Request[?], messages: Messages)
+@(
+        signInLink: Uri)(implicit
+        request: RequestHeader,
+        messages: Messages
+)
 
 @key = @{"signInWithAgentDetails"}
 @title = @{messages(s"$key.title")}
