--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsEvidenceUploadProgressPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsEvidenceUploadProgressPage.scala.html
@@ -19,11 +19,15 @@
 @import uk.gov.hmrc.agentregistrationfrontend.model.upscan.UploadStatus
 
 @this(
-    layout: Layout,
-    govukButton: GovukButton
+        layout: Layout,
+        govukButton: GovukButton
 )
 
-@(status: UploadStatus)(implicit messages: Messages, request: RequestHeader)
+@(
+        status: UploadStatus)(implicit
+        messages: Messages,
+        request: RequestHeader
+)
 
 
 @pageTitle =  @{status match {
