--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AnswerSummary.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AnswerSummary.scala.html
@@ -14,8 +14,6 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.agentregistration.shared.AgentApplicationLlp
-@import uk.gov.hmrc.agentregistration.shared.ApplicantRoleInLlp
 @import uk.gov.hmrc.agentregistration.shared.AmlsDetails
 @import uk.gov.hmrc.agentregistrationfrontend.config.AmlsCodes
 @import uk.gov.hmrc.agentregistrationfrontend.util.DisplayDate.displayDateForLang
@@ -28,8 +26,10 @@
 @(
         key: String,
         amlsDetails: AmlsDetails,
-        canChange: Boolean = true
-)(implicit request: Request[?], messages: Messages)
+        canChange: Boolean = true)(implicit
+        request: RequestHeader,
+        messages: Messages
+)
 
 @supervisorRow = @{
   SummaryListRow(
