--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/ScottishLimitedPartnership/AnswerSummary.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/ScottishLimitedPartnership/AnswerSummary.scala.html
@@ -18,7 +18,7 @@
 @import uk.gov.hmrc.agentregistration.shared.UserRole
 
 @this(
-  govukSummaryList: GovukSummaryList
+        govukSummaryList: GovukSummaryList
 )
 
 @(
@@ -26,8 +26,9 @@
         answers: BusinessDetailsPartnership,
         userRole: UserRole,
         canChange: Boolean = true,
-        entityName: String
-)(implicit messages: Messages)
+        entityName: String)(implicit
+        messages: Messages
+)
 
 @agentTypeRow = @{
   SummaryListRow(
