--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/agentdetails/AgentBusinessNamePage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/agentdetails/AgentBusinessNamePage.scala.html
@@ -15,7 +15,6 @@
  *@
 
 @import uk.gov.hmrc.agentregistration.shared.agentdetails.AgentBusinessName
-@import uk.gov.hmrc.agentregistrationfrontend.action.AgentApplicationRequest
 @import uk.gov.hmrc.agentregistrationfrontend.forms.AgentBusinessNameForm
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.apply.partials.ContinueOrSaveForLater
@@ -33,8 +32,10 @@
 
 @(
         form: Form[AgentBusinessName],
-        bprBusinessName: Option[String]
-)(implicit request: AgentApplicationRequest[?], messages: Messages)
+        bprBusinessName: Option[String])(implicit
+        request: RequestHeader,
+        messages: Messages
+)
 
 @key = @{
     AgentBusinessNameForm.key
