--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/TelephoneNumberPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/TelephoneNumberPage.scala.html
@@ -15,7 +15,6 @@
  *@
 
 @import uk.gov.hmrc.agentregistration.shared.TelephoneNumber
-@import uk.gov.hmrc.agentregistrationfrontend.action.AgentApplicationRequest
 @import uk.gov.hmrc.agentregistrationfrontend.forms.TelephoneNumberForm
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.apply.partials.ContinueOrSaveForLater
@@ -29,7 +28,11 @@
         continueOrSaveForLater: ContinueOrSaveForLater
 )
 
-@(form: Form[TelephoneNumber])(implicit request: AgentApplicationRequest[AnyContent], messages: Messages)
+@(
+        form: Form[TelephoneNumber])(implicit
+        request: RequestHeader,
+        messages: Messages
+)
 
 @key = @{
     TelephoneNumberForm.key
