--- a/app/uk/gov/hmrc/agentregistrationfrontend/testonly/views/TestOnlyHubPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/testonly/views/TestOnlyHubPage.scala.html
@@ -39,15 +39,15 @@
   <ul class="govuk-list govuk-list--bullet">
     <li><a class="govuk-link" href="@AppRoutes.apply.AgentApplicationController.startRegistration">
       Agent Start Registration</a></li>
-    <li><a class="govuk-link" href="@AppRoutes.testOnly.FastForwardController.show">fast forward links</a></li>
+    <li><a class="govuk-link" href="@AppRoutes.testOnly.applicant.FastForwardController.show">fast forward links</a></li>
     <li><a class="govuk-link" href="@AppRoutes.testOnly.TestOnlyController.showPlaySession">showPlaySession</a></li>
-    <li><a class="govuk-link" href="@AppRoutes.testOnly.TestOnlyController.showAgentApplication">
+    <li><a class="govuk-link" href="@AppRoutes.testOnly.applicant.TestOnlyController.showAgentApplication">
       showAgentApplication</a></li>
-    <li><a class="govuk-link" href="@AppRoutes.testOnly.TestOnlyController.showProvidedDetails">
+    <li><a class="govuk-link" href="@AppRoutes.testOnly.individual.TestOnlyController.showProvidedDetails">
       showProvidedDetails</a></li>
-    <li><a class="govuk-link" href="@AppRoutes.testOnly.TestOnlyController.makeTestSubmittedApplication()">
+    <li><a class="govuk-link" href="@AppRoutes.testOnly.applicant.TestOnlyController.makeTestSubmittedApplication()">
       get-link-id</a></li>
-    <li><a class="govuk-link" href="@AppRoutes.testOnly.TestOnlyController.removeNinoAndDobFromIndividual()">
+    <li><a class="govuk-link" href="@AppRoutes.testOnly.individual.TestOnlyController.removeNinoAndDobFromIndividual()">
       remove Nino from currently signed in Individual</a></li>
   </ul>
 }
