--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/IndividualSaUtrPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/IndividualSaUtrPage.scala.html
@@ -16,7 +16,7 @@
 
 @import uk.gov.hmrc.agentregistration.shared.llp.IndividualSaUtr
 @import uk.gov.hmrc.agentregistration.shared.llp.UserProvidedSaUtr
-@import uk.gov.hmrc.agentregistrationfrontend.action.providedetails.llp.IndividualProvideDetailsRequest
+@import uk.gov.hmrc.agentregistrationfrontend.action.individual.llp.IndividualProvideDetailsRequest
 @import uk.gov.hmrc.agentregistrationfrontend.forms.IndividualSaUtrForm
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.providedetails.partials.SaveAndContinue
