APB-10703 renaming things

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/listdetails/nonincorporated/CheckYourAnswersPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/listdetails/nonincorporated/CheckYourAnswersPage.scala.html
@@ -55,7 +55,7 @@
 
 @paddingNeeded = @{agentApplication.getNumberOfRequiredKeyIndividuals match {
   case a @ FiveOrLess(_) => 0
-  case a @ SixOrMore(_) => a.paddingRequired
+  case a @ SixOrMore(_) => a.requiredPadding
 }}
 
 @paddingInset = {
