--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/listdetails/nonincorporated/EnterIndividualNameComplexPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/listdetails/nonincorporated/EnterIndividualNameComplexPage.scala.html
@@ -53,7 +53,7 @@
   </ul>
 }
 @numberOfKeyIndividuals = @{numberOfRequiredKeyIndividuals.numberOfKeyIndividualsResponsibleForTaxMatters}
-@paddingRequired = @{numberOfRequiredKeyIndividuals.paddingRequired}
+@paddingRequired = @{numberOfRequiredKeyIndividuals.requiredPadding}
 
 @layout(
     pageTitle = title,
