APB-10404 aligning package names Signed-off-by: pav <173694350+paweldigital@users.noreply.github.com>
Signed-off-by: pav <173694350+paweldigital@users.noreply.github.com>

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/listdetails/nonincorporated/CheckYourAnswersPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/listdetails/nonincorporated/CheckYourAnswersPage.scala.html
@@ -20,7 +20,7 @@
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.apply.partials.ContinueOrSaveForLaterLinks
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.govukfrontend.views.html.components.*
-@import uk.gov.hmrc.agentregistration.shared.llp.IndividualProvidedDetails
+@import uk.gov.hmrc.agentregistration.shared.individual.IndividualProvidedDetails
 @import uk.gov.hmrc.agentregistrationfrontend.util.MessageKeys
 
 @this(
