--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/listdetails/nonincorporated/RemoveKeyIndividualPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/listdetails/nonincorporated/RemoveKeyIndividualPage.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.agentregistration.shared.llp.IndividualProvidedDetails
+@import uk.gov.hmrc.agentregistration.shared.individual.IndividualProvidedDetails
 @import uk.gov.hmrc.agentregistrationfrontend.forms.RemoveKeyIndividualForm
 @import uk.gov.hmrc.agentregistrationfrontend.forms.YesNo.Yes
 @import uk.gov.hmrc.agentregistrationfrontend.forms.YesNo.No
