--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/AnswerSummary.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/AnswerSummary.scala.html
@@ -14,9 +14,9 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.agentregistration.shared.llp.IndividualProvidedDetailsToBeDeleted
-@import uk.gov.hmrc.agentregistration.shared.llp.IndividualDateOfBirth
-@import uk.gov.hmrc.agentregistration.shared.llp.{IndividualNino, IndividualSaUtr}
+@import uk.gov.hmrc.agentregistration.shared.individual.IndividualProvidedDetailsToBeDeleted
+@import uk.gov.hmrc.agentregistration.shared.individual.IndividualDateOfBirth
+@import uk.gov.hmrc.agentregistration.shared.individual.{IndividualNino, IndividualSaUtr}
 @import uk.gov.hmrc.agentregistration.shared.util.Errors.getOrThrowExpectedDataMissing
 @import uk.gov.hmrc.agentregistrationfrontend.util.DisplayDate.displayDateForLang
 
