--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/IndividualDateOfBirthPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/IndividualDateOfBirthPage.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.agentregistration.shared.llp.UserProvidedDateOfBirth
+@import uk.gov.hmrc.agentregistration.shared.individual.UserProvidedDateOfBirth
 @import uk.gov.hmrc.agentregistrationfrontend.forms.IndividualDateOfBirthForm
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.providedetails.partials.SaveAndContinue
