--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/IndividualNinoPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/IndividualNinoPage.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.agentregistration.shared.llp.UserProvidedNino
+@import uk.gov.hmrc.agentregistration.shared.individual.UserProvidedNino
 
 @import uk.gov.hmrc.agentregistrationfrontend.forms.IndividualNinoForm
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
