--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/CheckYourAnswersPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/CheckYourAnswersPage.scala.html
@@ -17,7 +17,7 @@
 @import uk.gov.hmrc.govukfrontend.views.html.components._
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.providedetails.individualconfirmation.AnswerSummary
-@import uk.gov.hmrc.agentregistration.shared.llp.IndividualProvidedDetailsToBeDeleted
+@import uk.gov.hmrc.agentregistration.shared.individual.IndividualProvidedDetailsToBeDeleted
 
 @this(
         layout: Layout,
