--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/IndividualSaUtrPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/individualconfirmation/IndividualSaUtrPage.scala.html
@@ -14,8 +14,8 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.agentregistration.shared.llp.IndividualSaUtr
-@import uk.gov.hmrc.agentregistration.shared.llp.UserProvidedSaUtr
+@import uk.gov.hmrc.agentregistration.shared.individual.IndividualSaUtr
+@import uk.gov.hmrc.agentregistration.shared.individual.UserProvidedSaUtr
 
 @import uk.gov.hmrc.agentregistrationfrontend.forms.IndividualSaUtrForm
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
